--- a/style.css
+++ b/style.css
@@ -80,7 +80,17 @@ display: none;
 .categories p{
     background-color: #a435f0;
     padding: 10px;
+    color: white;
     border-radius: 30px;
+    border: solid #a435f0 1px;
+    cursor: pointer;
+
+}
+.categories p:hover{
+    background-color: transparent;
+    transition: 1s;
+    color: black;
+    border: solid #a435f0 1px;
 }
 .sales-image{
     position: relative;
@@ -100,8 +110,22 @@ display: none;
     position: absolute;
     top: 30%;
     left: 5%;
+    animation-name: zoom;
+    animation-duration: 2s;
+    opacity: 0;
+    animation-fill-mode: forwards;
 
 
+}
+@keyframes zoom {
+    0%{
+        transform: scale(0);
+        opacity: 0;
+    }
+    100%{
+        transform: scale(1);
+        opacity: 100;
+    }
 }
 .recommended{
     padding: 10px;
