--- a/style.css
+++ b/style.css
@@ -46,6 +46,9 @@ body{
     gap: 10px;
     align-items: center;
 }
+.navbar__s4{
+    display: none;
+}
 /*my learning popup*/
 .my_learning{
     position: relative;
@@ -138,7 +141,9 @@ display: none;
     margin-top: 5px;
 }
 .course-card{
-    width: 300px;
+    flex-grow: 1;
+    flex-basis: 20%;
+    margin: 5px;
 }
 .course-card img{
     width: 100%;
@@ -191,3 +196,23 @@ display: none;
     margin: 10px;
 
 }
+@media screen and (max-width:800px){
+body {
+    font-size: 10px;
+}
+}
+@media screen and (max-width:500px){
+.course-card{
+    flex-basis: 40%;
+}
+.categories{
+    display: none;
+}
+.navbar__s2,.navbar__s3{
+    display: none;
+}
+.navbar__s4{
+    display: block;
+}
+}
+    
